Fixed white spacing on "How it works" + social links

--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -159,15 +159,18 @@
 
             .wrapper {
                 .hero-content {
-                    margin: 95px 0 130px;
+                    margin: 120px 0 100px;
                     display: inline-block;
 
                     counter-reset: step;
 
                     li {
-                        margin: 20px 30px 40px 0;
+                        margin: 40px 30px 40px 0;
                         display: block;
 
+                        &:last-child {
+                            margin: 60px 30px 40px;
+                        }
 
                         .step { margin: 5px 20px 0 0; }
 
